--- a/main.ipynb
+++ b/main.ipynb
@@ -108,17 +108,18 @@
     "\n",
     "if json_status == 0:\n",
     "    print(\"API Status: \" + str(json_status) + \" = A successful route call.\\n\")\n",
-    "    print(\"=============================================\")\n",
+    "    print(\"========================================================\")\n",
     "    print(\"Directions from \" + (orig) + \" to \" + (dest))\n",
     "    print(\"Trip Duration: \" + (json_data[\"route\"][\"formattedTime\"]))\n",
     "    print(\"Kilometers: \" + str(\"{:.2f}\".format((json_data[\"route\"][\"distance\"])*1.61)))\n",
+    "    print(\"Speed:\" + str(\"{:.2f}\".format((json_data[\"route\"][\"\"]))))\n",
     "    print(\"Fuel Used (Ltr): \" + str(\"{:.2f}\".format((json_data[\"route\"][\"fuelUsed\"])*3.78)))\n",
-    "    print(\"=============================================\")\n",
+    "    print(\"========================================================\")\n",
     "    \n",
     "    for each in json_data[\"route\"][\"legs\"][0][\"maneuvers\"]:\n",
     "        mytext = mytext + (each[\"narrative\"]) + \" (\" + str(\"{:.2f}\".format((each[\"distance\"])*1.61) + \" km)\")\n",
     "        print((each[\"narrative\"]) + \" (\" + str(\"{:.2f}\".format((each[\"distance\"])*1.61) + \" km)\"))\n",
-    "    print(\"=============================================\\n\")\n",
+    "    print(\"========================================================\\n\")\n",
     "    \n",
     "route = client.directions(coordinates=coordinates, profile='driving-car', format='geojson')\n",
     "map_directions = folium.Map()\n",
